--- a/src/styles/blocks/event-card.less
+++ b/src/styles/blocks/event-card.less
@@ -100,11 +100,11 @@ box-sizing: border-box;
     display: block;
     margin-bottom: 25px;
     &__picture::before {
-      content: '';
-      display: block;
-      width: 100%;
-      padding-top: 107.160%;
-  }
+        content: '';
+        display: block;
+        width: 100%;
+        padding-top: 107.160%;
+    }
 }
 
 &__picture-img {
@@ -121,7 +121,7 @@ box-sizing: border-box;
     min-height: 64px;
     text-decoration: underline;
     text-decoration-color: transparent;
-    font-family: 'Open Sans';
+    font-family: @font1;
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
