--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -2,10 +2,13 @@
 @white: #ffffff;
 @black: #1f1e1e;
 @black_80: fabe(@black, 80%);
+@black_40: fabe(@black, 40%);
 @red: #bc3324;
 @red_dark: #a51505;
 @gray: #dedede;
 @gray_dark: #bfbfbf;
+
+
 // Шрифты
 @font1: "Open Sans", sans-serif;
 @font2: "Lora", serif;
