--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -11,11 +11,14 @@
 @import "blocks/title.less";
 
 @import "blocks/btn.less";
+@import "blocks/link.less";
 @import "blocks/radio.less";
 @import "blocks/check.less";
 @import "blocks/section-title.less";
 @import "blocks/field.less";
 @import "blocks/form.less";
+@import "blocks/contacts-item.less";
+@import "blocks/subscribe.less";
 
 @import "blocks/listing.less";
 @import "blocks/reserve.less";
@@ -23,8 +26,10 @@
 @import "blocks/events.less";
 @import "blocks/event.less";
 @import "blocks/event-card.less";
+@import "blocks/contacts.less";
 
 @import "blocks/pp.less";
+@import "blocks/about.less";
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
 @import "blocks/main-header.less";
