--- a/src/styles/global/common.less
+++ b/src/styles/global/common.less
@@ -43,10 +43,52 @@ img {
   object-fit: cover;
 }
 
+input,
+textarea,
+select
 button {
   box-shadow: none;
   outline: none;
   color: @black;
   font-family: @font1;
+}
+
+button{
   cursor: pointer;
+}
+
+input,
+textarea {
+  &::-webkit-input-placeholder{
+    color: #6c6c6c;
+  }
+  &::-moz-placeholder{
+    color: #6c6c6c;
+  }
+  &:-moz-placeholder{
+    color: #6c6c6c;
+  }
+  &::-ms-input-placeholder{
+    color: #6c6c6c;
+  }
+}
+
+input:focus,
+textarea:focus {
+  &::-webkit-input-placeholder{
+    color: transparent;
+  }
+  &::-moz-placeholder{
+    color: transparent;
+  }
+  &:-moz-placeholder{
+    color: transparent;
+  }
+  &::-ms-input-placeholder{
+    color: transparent;
+  }
+}
+
+textarea{
+  resize: none;
 }
