--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -6,6 +6,7 @@
 //vendor
 
 //block
+@import "blocks/doit.less";
 @import "blocks/body.less";
 @import "blocks/home.less";
 @import "blocks/title.less";
@@ -16,19 +17,28 @@
 @import "blocks/check.less";
 @import "blocks/section-title.less";
 @import "blocks/field.less";
+@import "blocks/content.less";
 @import "blocks/form.less";
 @import "blocks/contacts-item.less";
+@import "blocks/info-item.less";
 @import "blocks/subscribe.less";
+
+@import "blocks/breadscrumbs.less";
 
 @import "blocks/listing.less";
 @import "blocks/reserve.less";
 
+@import "blocks/article-card.less";
 @import "blocks/events.less";
 @import "blocks/event.less";
+@import "blocks/upcoming.less";
+@import "blocks/offers.less";
 @import "blocks/event-card.less";
 @import "blocks/contacts.less";
+@import "blocks/info.less";
 
 @import "blocks/pp.less";
+@import "blocks/table.less";
 @import "blocks/about.less";
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
